<resources>
    <string name="app_name">ManUtd Nepal</string>
    <string name="loading">Loading...</string>
    <string name="error">Error Ocurred. Try again</string>
    <string name="retry">Retry again...</string>
    <string name="empty">Empty</string>
    <string name="days">DAYS</string>
    <string name="hours">HOURS</string>
    <string name="mins">MINS</string>
    <string name="secs">SECS</string>
    <string name="loading_fixtures">Loading fixtures...</string>
    <string name="manchester_united">Manchester United</string>
    <string name="loading_league_table">Loading league table...</string>
    <string name="loading_recent_results">Loading recent results...</string>
    <string name="league_table">League Table</string>
    <string name="epl_matchweek">EPL MATCHWEEK</string>
    <string name="manutd_fixtures">FIXTURES</string>
    <string name="recent_results">RECENT RESULTS</string>
    <string name="loading_top_scorers">Loading top scorers...</string>
    <string name="top_scorers">Top Scorers</string>
    <string name="loading_injuries">Loading injuries...</string>
    <string name="injuries">Injuries</string>
    <string name="manutd_shortname">MUN</string>
    <string name="no_internet_message">Please check your internet connection.</string>
    <string name="old_trafford">Old Trafford</string>
    <string name="no_data_string">-</string>
    <string name="about_us_detail_text">Manchester United Supporters’ Club, Nepal is an Official Supporters’ Club registered in 2014 and recognised by Manchester United in 2016. The club is a non-profit organization run by the fans. It has been actively working for the development of sports and social activites with the main objective of uniting all the Manchester United supporters under a common roof.</string>
    <string name="about_us_membership_text">Official membership can be applied by the Nepali Red Devils from the clubs official website.</string>
    <string name="copyright_owner_string">All Images and logos used in this app are copyright by their respective owners.</string>
    <string name="official_website_link_text">&lt;a href="https://manutd.org.np">manutd.org.np&lt;/a></string>
    <string name="facebook_link_text">&lt;a href="https://facebook.com/muscnepal">muscnepal&lt;/a></string>
    <string name="twitter_link_text">&lt;a href="https://twitter.com/muscnp">@muscnp&lt;/a></string>
    <string name="email_link_text">&lt;a href="mailto:info@manutd.org.np">info@manutd.org.np&lt;/a></string>
    <string name="instagram_link_text">&lt;a href="https://www.instagram.com/muscnepal/">muscnepal&lt;/a></string>
    <string name="awecode_link_text">&lt;a href="https://awecode.com">Awecode&lt;/a></string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="cancel">CANCEL</string>
    <string name="update">UPDATE</string>
    <string name="tap_title">Access Side Menu</string>
    <string name="tap_description">Click on the hamburger icon to open navigation menu.</string>
    <string name="loading_results">Loading results...</string>
    <string name="fixture_schedule_yet_to_come">Fixture schedule yet to come....</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="password_error">Password do not match.</string>
    <string name="not_empty_error_text">This field is required</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="password_error_text">Password must contain at least 1 alphabet and 1 digit</string>
    <string name="invalid_length">Password must be at least of length 8</string>
    <string name="sign_in">Sign In</string>
    <string name="username_or_email">Username or Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="success_sign_out_text">Signed out successfully.</string>
    <string name="success">Success!</string>
    <string name="success_sign_in_text">Signed in Successfully.</string>
    <string name="muscn">MUSCN</string>
    <string name="login_error">Unable to log in with provided credentials.</string>
    <string name="username_password_incorrect_text">That username or password doesn\'t look right.</string>
    <string name="successful_account_creation">Successfully created account.</string>
    <string name="duplicate_username">That username isn\'t available. Try another.</string>
    <string name="duplicate_email">That email isn\'t available. Try another.</string>
    <string name="loading_result_details">Loading result details...</string>
    <string name="loading_data">Loading data...</string>
    <string name="mun">MUN</string>
    <string name="ft">FT</string>
    <string name="https_manutd_org_np">https://manutd.org.np</string>
    <string name="unspecified">Unspecified</string>
    <string name="loading_news">Loading News...</string>
    <string name="news">News</string>
    <string name="injury">Injury</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="membership_registration">Membership Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="about_us">About Us</string>
    <string name="live_screening">Live Screening @</string>
    <string name="google_maps_package_name">com.google.android.apps.maps</string>
    <string name="install_google_maps">Please install Google Maps.</string>
    <string name="install">Install</string>

    <!--facebook login-->
    <string name="facebook_app_id">745752022186281</string>
    <string name="fb_login_protocol_scheme">fb745752022186281</string>

    <string name="partners">Partners</string>
    <string name="loading_partners">Loading partners...</string>
    <string name="digits_only">0123456789</string>
    <string name="payment_options">Payment Options</string>
    <string name="e_sewa">E-Sewa</string>
    <string name="receipt">Receipt</string>
    <string name="bank_deposit">Bank Deposit</string>
    <string name="receipt_number">Receipt Number</string>
    <string name="receipt_no_if_you_paid_directly_to_representative">Receipt No. (If you paid directly to representative):</string>
    <string name="field_cannot_be_empty">Field cannot be empty.</string>
    <string name="choose_bank_deposit">Tap to Upload Bank Deposit</string>
    <string name="thank_you_for_being_around_have_a_nice_day">Thank you for being around. Have a nice day!!!.</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty.</string>
    <string name="payment_via_any_one">Payment Via (any one):</string>
    <string name="esewa_payment_success_mg">Esewa payment success. Click submit to finish registration.</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="membership_registration_success_msg">Thank you for registering to be a member. You\'ll be notified when your membership package is available.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="please_check_email_confirmation">Please confirm your email address.</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="google_login_error_try_again_msg">Google login error occurred. Please try again.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="request_id_token">658479996714-7r2eh6uf4jhe7ge4bmrv3m6vru46orfh.apps.googleusercontent.com</string>


</resources>
