<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">
        <!--fullname-->
        <LinearLayout
            android:id="@+id/fullnameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/normal_text_view_style"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/fullnameEditText"
                style="@style/normal_edit_text_style"
                android:hint="@string/full_name"
                android:inputType="text" />
        </LinearLayout>

        <!--email-->
        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/normal_text_view_style"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailEditText"
                style="@style/normal_edit_text_style"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <!--password-->
        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/normal_text_view_style"
                android:text="@string/password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/ic_password_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/password_toggle_tint_color">

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/normal_edit_text_style"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--sign up button-->
        <Button
            android:id="@+id/signUpButton"
            style="@style/normal_button_style"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sign_up" />
    </LinearLayout>
</ScrollView>

