<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/signup_logo_width"
        android:layout_height="@dimen/signup_logo_width"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/aboutus_muscn_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fillViewport="true"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <!--username-->
            <LinearLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/normal_text_view_style"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/usernameEditText"
                    style="@style/normal_edit_text_style"
                    android:hint="@string/username" />
            </LinearLayout>
            <!--password-->
            <LinearLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/normal_text_view_style"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/normal_edit_text_style"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/signInButton"
                style="@style/normal_button_style"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/sign_in" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
