<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/nav_main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/whiteColor"
                android:clickable="true"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/navHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/navLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:src="@drawable/aboutus_muscn_logo"/>

        <LinearLayout
            android:id="@+id/muscnTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/navLogo"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="MANCHESTER UNITED"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/labels_text_size"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="SUPPORTERS' CLUB,"
                    android:textColor="@color/whiteColor"
                    android:textSize="@dimen/labels_text_size"
                    android:textStyle="italic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" NEPAL"
                    android:textColor="@color/whiteColor"
                    android:textSize="@dimen/labels_text_size"
                    android:textStyle="bold|italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/https_manutd_org_np"
                    android:textColor="@color/whiteColor"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/versionNavTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="v0.0.1"
                    android:textColor="@color/whiteColor"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout><!--nav recycler view-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navHeaderLayout"
        android:orientation="vertical"
        android:weightSum="6">

        <!--make layout weight of recycler view 6-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/drawerList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5"
            />

        <!--make below visibility gone-->
        <include
            layout="@layout/white_horizontal_line"
            android:visibility="visible"/>

        <include
            layout="@layout/red_horizontal_line"
            android:visibility="visible"/>
        <!--make below visibility gone-->

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="2">

            <Button
                android:id="@+id/signUpButton"
                style="@style/no_background_button_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/signup"/>

            <Button
                android:id="@+id/signInButton"
                style="@style/no_background_button_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/sign_in"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>