<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--countdown timer: day,hr, min,sec-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/daysTextView"
                style="@style/countdown_timer_text_style"
                android:layout_gravity="center"
                android:text="0"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/daysLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/days"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/time_label_txt_size" />
        </LinearLayout>


        <View
            android:layout_width="0.4dp"
            android:layout_height="@dimen/vertical_line_height"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hoursTextView"
                style="@style/countdown_timer_text_style"
                android:layout_gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hoursLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/hours"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/time_label_txt_size" />
        </LinearLayout>


        <View
            android:layout_width="0.4dp"
            android:layout_height="@dimen/vertical_line_height"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/minsTextView"
                style="@style/countdown_timer_text_style"
                android:layout_gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minsLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/mins"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/time_label_txt_size" />
        </LinearLayout>


        <View
            android:layout_width="0.4dp"
            android:layout_height="@dimen/vertical_line_height"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/secsTextView"
                style="@style/countdown_timer_text_style"
                android:layout_gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/secsLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/secs"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/time_label_txt_size" />
        </LinearLayout>


    </LinearLayout>

    <!--match between -->
    <TextView
        android:id="@+id/firstTeamNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_view_margin_top_large"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/match_between_txt_size" />

    <ImageView
        android:id="@+id/firstTeamImageView"
        android:layout_width="@dimen/team_logo_size"
        android:layout_height="@dimen/team_logo_size"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_placeholder_team" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="vs."
        android:textColor="@color/white"
        android:textSize="@dimen/match_between_txt_size" />

    <ImageView
        android:id="@+id/secondTeamImageView"
        android:layout_width="@dimen/team_logo_size"
        android:layout_height="@dimen/team_logo_size"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_placeholder_team" />

    <TextView
        android:id="@+id/secondTeamNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/match_between_txt_size" />


    <!--competition name-->
    <TextView
        android:id="@+id/competitionNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_view_margin_top_large"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="English League Cup"
        android:textColor="@color/white"
        android:textSize="@dimen/competition_txt_size" />

    <TextView
        android:id="@+id/competitionVenueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/white"
        android:textSize="@dimen/competition_txt_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"

        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/liveOnTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:text="live On"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/broadCastChannelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/competition_txt_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/dateTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_view_margin_top_large"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/competition_txt_size" />
</LinearLayout>